# MRI-toolkit

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  _toc.yml  conf.py  pyproject.toml
.github/workflows/: build_docs.yml  main.yml  setup-data.yml
docs/: api.rst  concentration.md  datasets.md  hybrid.md  info.md  install.md  looklocker.md  mixed.md  napari.md  r1.md  refs.bib  roi.md  show.md
examples/: propagate_noise.py
src/MRI/: __init__.py
src/MRI/data/: __init__.py  base.py  io.py  orientation.py
src/MRI/segmentation/: __init__.py  groups.py  lookup_table.py
src/MRI/statistics/: __init__.py  compute_stats.py  utils.py
src/mritk/: __init__.py  cli.py  concentration.py  data.py  datasets.py  download_data.py  hybrid.py  info.py  looklocker.py  masks.py  mixed.py  napari.py  r1.py  segmentation.py  show.py  stats.py  testing.py  utils.py
src/mritk/concentration/: __init__.py  concentration.py
src/mritk/data/: __init__.py  base.py  io.py  orientation.py
src/mritk/masking/: __init__.py  masks.py  utils.py
src/mritk/segmentation/: __init__.py  groups.py  lookup_table.py  segmentation.py
src/mritk/statistics/: __init__.py  cli.py  compute_stats.py  metadata.py  stat_functions.py  utils.py
src/mritk/t1/: __init__.py  concentration.py  hybrid.py  looklocker.py  mixed.py  r1.py  utils.py
src/mritk/t1_maps/: __init__.py  dicom_to_nifti.py  t1_maps.py  t1_to_r1.py  utils.py
test/: conftest.py  create_test_data.py  download_data.py  test_cli.py  test_concentration.py  test_data_orientation.py  test_datasets.py  test_hybrid.py  test_looklocker.py  test_masks.py  test_mixed.py  test_mri_io.py  test_mri_orientation.py  test_mri_stats.py  test_mri_t1_maps.py  test_r1.py  test_segmentation.py  test_t1_maps.py  test_t1_utils.py
tests/: conftest.py  create_test_data.py  test_cli.py  test_concentration.py  test_data_orientation.py  test_datasets.py  test_hybrid.py  test_looklocker.py  test_masks.py  test_metadata.py  test_mixed.py  test_mri_io.py  test_mri_orientation.py  test_mri_stats.py  test_r1.py  test_segmentation.py  test_utils.py
